deploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 1 
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: mo053/hello1.0:latest
        ports:
        - containerPort: 3000
